updated updateAccount logic added util/type.go
